Add Services, refactor the contexts to use one, other refactorings
